--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>COVID-19 3D Model Sample</title>
+    <style>
+        model-viewer {
+            margin: auto;
+        }
+    </style>
 </head>
 
 <body>
